--- a/ibas.importexport/src/main/resources/i18n/locale.ie.properties
+++ b/ibas.importexport/src/main/resources/i18n/locale.ie.properties
@@ -10,3 +10,4 @@ msg_ie_no_template = 没有模板。
 msg_ie_no_input_data = 没有输入数据。
 msg_ie_input_data_faild = 第[%s]个数据发生错误：
 msg_ie_template_size_not_enough = 模板[%s]大小不足。
+msg_ie_invaild_bo_keys = 无效的对象标识。
