--- a/ibas.importexport.service/src/main/webapp/resources/languages/importexport.zh_CN.json
+++ b/ibas.importexport.service/src/main/webapp/resources/languages/importexport.zh_CN.json
@@ -48,6 +48,7 @@
   "importexport_export_template": "导出模板",
   "importexport_please_template": "请选择模板",
   "importexport_print": "打印",
+  "importexport_printed_count": "已打印 {0} 次",
   "importexport_preview": "预览",
   "importexport_code_pretty": "美化",
   "importexport_export_conditions": "导出的查询条件（无条件仅为模板）",
