导出界面调优

--- a/ibas.importexport.service/src/main/webapp/resources/languages/importexport.zh_CN.json
+++ b/ibas.importexport.service/src/main/webapp/resources/languages/importexport.zh_CN.json
@@ -54,7 +54,7 @@
   "importexport_printed_count": "已打印 {0} 次",
   "importexport_preview": "预览",
   "importexport_code_pretty": "美化",
-  "importexport_export_conditions": "导出的查询条件（无条件仅为模板）",
+  "importexport_export_conditions": "导出的查询条件（无条件为模板）",
   "importexport_title_general": "常规",
   "importexport_title_size": "规格",
   "importexport_page_number": "第{0}页",
